--- a/.github/workflows/update-api-client.yml
+++ b/.github/workflows/update-api-client.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
       - uses: actions/setup-node@v4
-        with:
-        node-version-file: '.nvmrc'
-        cache: pnpm
+        # with:
+        # node-version-file: '.nvmrc'
+        # cache: pnpm
 
       - run: pnpm install --frozen-lockfile --prefer-offline
       # - run: cd packages/api-client && pnpm generate-react-query-openapi-client
